# zookeeper

./: .gitignore  CLAUDE.md  Makefile  README.md  SKILL.md  eslint.config.ts  gleam.toml  manifest.toml  package.json  pyproject.toml  tsconfig.json
src/: config.ts  csv_import.ts  download.ts  http.ts  list.ts  main.ts  metadata_import.ts  query.ts  sync.ts  verify.ts  zoo.gleam
src/zookeeper/: __init__.py  download_utils.py  downloader.py  gpmetadata.py  listing_database.py  lists.py
zoo_gleam/: README.md  entry.mjs  gleam.toml  manifest.toml
zoo_gleam/src/: zoo_gleam.gleam
zoo_gleam/src/zoo/: config.gleam  config_ffi.mjs  db.gleam  db_ffi.mjs  http.gleam  http_ffi.mjs  import_ffi.mjs  importer.gleam  query.gleam
